# pg-authz

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  install.sql
.github/workflows/: ci.yml
authn/: README.md
authz/: README.md  install.sql
authz/docs/: admin-ui.md
authz/tests/: conftest.py  sdk.py  test_access_patterns.py  test_concurrency.py  test_consistency.py  test_e2e_demo.py  test_hierarchy.py  test_listing.py  test_maintenance.py  test_namespaces.py  test_resource_hierarchy.py  test_rls.py  test_sdk.py  test_stress.py  test_validation.py
config/: README.md
docs/: README.md
docs/authn/: README.md  sdk.md  sql.md
docs/authz/: README.md  sdk.md  sql.md
docs/config/: README.md  sdk.md  sql.md
docs/meter/: README.md  sdk.md  sql.md
examples/blog-auth-demo/: Dockerfile  README.md  docker-compose.yml  requirements.txt
examples/notes/: Dockerfile  README.md  docker-compose.yml  init-app.sql
meter/: README.md
scripts/: build.sh
scripts/gendocs/: __init__.py  cli.py  extractors.py  generators.py  models.py  test_extractors.py  validators.py
sdk/: README.md  pyproject.toml
sdk/src/postkit/: __init__.py  base.py
sdk/src/postkit/authn/: __init__.py  client.py
sdk/src/postkit/authz/: __init__.py  client.py
sdk/src/postkit/config/: __init__.py  client.py
sdk/src/postkit/meter/: __init__.py  client.py
sdk/tests/: conftest.py
sdk/tests/authn/: conftest.py  helpers.py  test_audit.py  test_base.py  test_credentials.py  test_impersonation.py  test_lockout.py  test_maintenance.py  test_mfa.py  test_operator_impersonation.py  test_refresh_tokens.py  test_rls.py  test_sessions.py  test_tokens.py  test_users.py  test_validation.py
sdk/tests/authz/: conftest.py  helpers.py  test_access_patterns.py  test_audit.py  test_concurrency.py  test_consistency.py  test_e2e_demo.py  test_expiration.py  test_groups.py  test_hierarchy.py  test_listing.py  test_maintenance.py  test_namespaces.py  test_nested_teams.py  test_resource_hierarchy.py  test_rls.py  test_sdk.py  test_stress.py  test_transactions.py  test_validation.py
sdk/tests/config/: conftest.py  helpers.py  test_audit.py  test_entries.py  test_schemas.py  test_tenancy.py  test_validation.py
sdk/tests/integration/: conftest.py  test_api_keys.py
sdk/tests/meter/: conftest.py  helpers.py  test_sdk.py  test_validation.py
src/functions/: 000_config.sql  000_validation.sql  001_validation.sql  001_write_tuple.sql  002_delete_tuple.sql  003_check.sql  004_explain.sql  005_recompute.sql  (+17 more)
tests/: conftest.py  sdk.py  test_access_patterns.py  test_audit.py  test_concurrency.py  test_consistency.py  test_e2e_demo.py  test_expiration.py  test_groups.py  test_hierarchy.py  test_incremental.py  test_listing.py  test_maintenance.py  test_namespaces.py  test_nested_teams.py  test_rls.py  test_sdk.py  test_stress.py  test_transactions.py  test_validation.py
(+133 files in other folders)
