[project]
name = "postkit"
version = "0.1.0"
description = "PostgreSQL-native authentication and authorization SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "postgresql",
    "authentication",
    "authorization",
    "rebac",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = ["psycopg>=3.1.0", "jsonschema>=4.0.0"]

[[project.authors]]
name = "Varun Chopra"

[project.optional-dependencies]
binary = ["psycopg[binary]>=3.1.0"]
dev = [
    "psycopg[binary]>=3.1.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/varunchopra/postkit"
Repository = "https://github.com/varunchopra/postkit"
Documentation = "https://github.com/varunchopra/postkit/tree/main/docs"
Issues = "https://github.com/varunchopra/postkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
